# seccompute

./: CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  tests.yml
docs/: DETAILS.md  PROMPT.md  README.md  RULES.md  SPEC.md  releasing.md
examples/: example_cyberark.json  profile1-more-blocks-more-dangerous.json  profile2-same-blocks-more-dangerous-blocked.json  profile3-network-blocked-iouring-bypass.json  profile3-network-blocked-iouring-bypass.yaml  profile4-blocked-syscall-equivalent-via-tier3.json  profile5-ptrace-conditional-pid-restriction.json  profile5-ptrace-conditional-pid-restriction.yaml  viz_demo.py
seccompute/: __init__.py  __main__.py  analyze.py  cap_scope.py  cap_scope.yaml  combo_rules.yaml  combos.py  conditionals.py  correctness.py  default_profiles.py  grader.py  intent.py  known_syscalls.py  model.py  normalizer.py  report.py  rules.py  scoring.py  syscall_rules.yaml  tiers.py  viz.py  weights.py  weights_v2.py
seccompute/rules/: combo_rules.yaml  conditional_rules.yaml  syscall_rules.yaml
seccompute/tests/: test_cap_scope.py  test_combos.py  test_conditionals.py  test_correctness.py  test_forced_f.py  test_integration.py  test_model.py  test_report.py  test_rules.py  test_scoring.py  test_security_regressions.py  test_tier_review.py  test_unknowns.py
seccompute/tools/: plot_hardening.py  plot_heatmap.py  plot_scatter_v2.py  plot_scatter_v3.py  plot_syscall_dist.py
semgrep-results-001/: bandit.json  bandit.stderr  python.json  python.stderr  secrets.json  secrets.stderr  security-audit.json  security-audit.stderr  trailofbits.json  yaml.json
tests/: conftest.py  test_caps.py  test_cli.py  test_combos.py  test_conditionals.py  test_grader.py  test_normalizer.py  test_public_api.py  test_rules.py  test_scoring.py
