[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seccompute"
version = "2.0.1"
description = "Seccomp profile hardening score engine"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
# viz: terminal rendering (ANSI). Add heavy deps here when adopted (e.g. rich, textual).
viz = []
# cli: reserved for future CLI-only deps (e.g. click, typer)
cli = []
# full: everything
full = ["seccompute[viz,cli]"]
dev = ["pytest>=7.0", "PyYAML>=6.0"]

[project.scripts]
seccompute = "seccompute.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["seccompute*"]

[tool.setuptools.package-data]
seccompute = ["syscall_rules.yaml"]
